--- a/style.css
+++ b/style.css
@@ -1,10 +1,23 @@
+@font-face {
+    font-family: NorseBold;
+    src: url('./Norse-Bold.otf');
+}
+
+
 .container {
+    font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
+    font-size: 18px;
+    font-weight: 560;
     display: flex;
+    max-width: 800px;
+    margin: auto;
 }
 
 form {
     display: flex;
     flex-direction: column;
+    font-weight: 300;
+    font-size: 0.8rem;
 }
 
 section {
@@ -14,21 +27,30 @@ section {
     max-width: 700px;
 }
 
-section div {
-}
-
 .left {
     background-image: url(./halie-west-25xggax4bSA-unsplash.jpg);
+    position: relative;
     background-position: center;
     background-size: auto;
+    text-align: center;
     width: 45vh;
     margin: 0%;
     padding: 0%;
+    color: aliceblue;
+}
+
+.left h4 {
+    position: absolute;
+    bottom: 10px;
+    right: 0px;
+    left: 0px;
+    margin: 0px;
+    font-size: 11px;
 }
 
 .logo {
-    height: auto;
-    position: relative;
+    font-family: NorseBold;
+    margin-top: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
