--- a/style.css
+++ b/style.css
@@ -3,37 +3,52 @@
     src: url('./Norse-Bold.otf');
 }
 
-
-.container {
+body {
     font-family: Open Sans,Helvetica Neue,Helvetica,Arial,sans-serif;
-    font-size: 18px;
+    font-size: 20px;
     font-weight: 560;
-    display: flex;
-    max-width: 800px;
-    margin: auto;
+    margin: 0px;
+    padding: 0px;
 }
 
-form {
+
+.container {
     display: flex;
-    flex-direction: column;
-    font-weight: 300;
-    font-size: 0.8rem;
+    margin: auto;
 }
 
 section {
     display: flex;
     flex-wrap: wrap;
-    border: 1px solid black;
-    max-width: 700px;
+    gap: 15px;
+    border-top-color: #888888;
+    padding: 20px 0px 20px 50px;
+    box-shadow: 0px 5px 5px #888888;
+}
+section >*{
+     display: flex;
+     flex-direction: column;
+     gap:4px
+}
+
+section div {
+    font-weight: 300;
+    font-size: 0.8rem;
+}
+
+section p {
+    flex-basis: 100%;
 }
 
 .left {
     background-image: url(./halie-west-25xggax4bSA-unsplash.jpg);
+    background-repeat: no-repeat;
     position: relative;
     background-position: center;
-    background-size: auto;
+    background-size: cover;
     text-align: center;
-    width: 45vh;
+    height: 100vh;
+    width: 45%;
     margin: 0%;
     padding: 0%;
     color: aliceblue;
@@ -50,19 +65,17 @@ section {
 
 .logo {
     font-family: NorseBold;
-    margin-top: 50px;
+    font-size: 50px;
+    margin-top: 30vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgba(0, 0, 0, 0.288);
-    padding-top: 5px;
-    padding-bottom: 5px;
-    
-
+    background-color: rgba(0, 0, 0, 0.486);
+    padding: 15px 30px 15px 30px;
 }
 
 .logo_head {
-    height: 5vh;
+    height: 12vh;
 }
 
 .logo_name {
@@ -70,10 +83,39 @@ section {
 }
 
 .right {
-    padding-left: 10px;
+    align-self: center;
+    max-width: 650px;
+}
+
+.right >* {
+    margin-bottom: 20px;
+}
+
+.right >p {
+    padding-left: 50px;
+    padding-right: 50px;
 }
 
 button {
     width: 180px;
-    margin-top: 10px;
+    margin-top: 30px;
+}
+
+input {
+    width: 200px;
+    height: 25px;
+    border-radius: 5px;
+}
+
+p {
+    margin: 0px;
+}
+
+.login {
+    font-size: 0.7rem;
+    font-weight: 500;
+}
+
+h1 {
+    margin: 0;
 }
